# macos-research

./: .gitignore  README.md
ColorSync-CVE-2022-26730/: README.md  cve-2022-26730-icc-color-profile-fuzzing-container-variant-009.txt
code/: Readme.md
code/VideoToolbox/Fuzzing/: CMakeLists.txt  Makefile  Readme.md  interpose.c  interpose_dist.c  runner.c  runner_dist.c  videotoolbox-interposer.c  videotoolbox-runner.m  videotoolbox_build.mk  videotoolbox_logging.mk
code/VideoToolbox/Fuzzing/VideoToolboxInterposing.xcodeproj/: project.pbxproj
code/imageio/: CMakeLists.txt  CMakeLists.xnu  Readme.md  common.cpp  corevideo-pixel-format-types.txt  coverage-sample-CoreGraphics.txt  coverage-sample-CoreSVG.txt  coverage-sample-ImageIO.txt  coverage-sample-libGIF.txt  coverage-sample-libPng.txt  debugger-test-001.cpp  exr-channel-subsampling-example.py  fuzz-videos.zsh  fuzzing-memory-pattern-generator.py  imageio-fuzzer.zsh  imageio-test-002.m  imageio-test-003.m  imageio-test-004.m  imageio-test-005.m  imageio-test-006.m  imageio.m  instrumentation-test-001.cpp  instrumentation-test-001.h  instrumentation.cpp  instrumentation.h  libpng-1642-macos-nm-sample-output.txt  main.cpp  read-magic-numbers.py  run-example-6.zsh  video-fuzzer.zsh
code/imageio/crashes/: 0D-DemoMAXIcc_CIccTagUtf8Text_GetBuffer_function.txt  CVE-2023-46866.txt  CVE-2023-47249.txt  Readme.md  crash-function-MediaToolbox _0x18f3c9000.txt  crash-function-YCCAtoRGBA-libappleexr-sample-001.txt  crash-function-applejpeg_decode_get_chroma_subsampling.txt  libAppleEXR-discussion-analysis.md  test_imageio-sample-axr_error_t-launch-blocks-function.txt
code/imageio/img/: Lorenz Attractor.eps  Readme.md  crash.atx
code/imageio/samples/: Readme.md  flaky_other_0xxxxxxx72c_0x0_1  sample_00003  sample_00112  sample_00113
code/imageio/tinyinst/: Readme.md  dyld_cache_map_parser.cpp  dyld_cache_map_regex_line_format.py  dyld_cache_map_regex_read.py  dyld_cache_map_regex_syntax_check.py  dyld_cache_map_regex_validation.py
code/png/: CMakeLists.txt  Readme.md  ballistic-fuzz-sample-001.cpp  bitflip.py  build-ballistic-fuzz-test.zsh  pngwriter-fuzz-sample-001.cpp  pngwriter-fuzz-sample-002.cpp
crashes/: README.md  XCBBuildService_2021-07-30-205036_Ds-Mac-mini-2.crash  dwarfdump-classic_2021-07-30-225353_Ds-Mac-mini-2.crash  xnu-8020.101.4~15-arm64e-sleep-transition-timeout-panic-21E258.txt
dyld/: dyld-strings-macos-1351-example-output-001.txt  dyld-strings-macos114-example-output-001.txt  dyld-strings-macos131-example-output-001.txt  strings-dyld-23C71-macos1421.txt
llmcjf/: LLMCJF_Regression_Sample_21APRIL2025-001.md  LLMCJF_Regression_Sample_22APRIL2025-001.md  Readme.md
probes-types/: 21E258-macos-monterey-dtrace-mach_kern-available-probes-sample-001.txt  Readme.md  crash-reporter-fields.txt
sockfuzzer/: CMakeCache.txt  Readme.md  build.ninja  clusterfuzz-testcase-minimized-net_fuzzer-4729558281093120  clusterfuzz-testcase-minimized-net_fuzzer-4838407041318912  clusterfuzz-testcase-minimized-net_fuzzer-4893426416484352  clusterfuzz-testcase-minimized-net_fuzzer-5278904546361344  clusterfuzz-testcase-minimized-net_fuzzer-5484532464222208  cmake_install.cmake  compile_commands.json  net_fuzzer.pb.cc  net_fuzzer.pb.h  sockfuzzer-userland-networking-crash-sample-public-domain-clusterfuzz-001.md  xnu-7195813-uniq-user-stack-info-fuzz-targets-sample.txt
sprr/: Makefile  README.md  S3_6_c15_c1_5.s  default.profraw  demo.c  flip-s3_0_c15_c0_0.c  logging.mk  out.html  out.sprr.c.html  s3_0_c15_c0_0.c  s3_4_c15_c10_5.c  s3_4_c15_c10_6.c  s3_4_c15_c5_1.c  s3_4_c15_c5_2.c  s3_6_c15_c1_5-ss8-lr16-rwx.c  s3_6_c15_c2_1.c  s3_6_c15_c2_1.s  s3_6_c15_c2_5.c  s3_6_c15_c7_4.c  sprr-0x00201420.c  sprr-0x910003fd.c  sprr-0xD503201F.c  sprr-0xD65F0FFF.c  sprr-0xa8c07bfd.c  sprr-0xffc003ff.c  sprr-S3_1_c15_c0_0.c  sprr-S3_4_c15_c2_7.c  sprr-comment-output.txt  sprr-commented.c  sprr-flip.c  sprr-h02332.c  sprr-pc1.c  sprr-pc10.c  sprr-pc11.c  sprr-pc12.c  sprr-pc13.c  sprr-pc14.c  sprr-pc15.c  sprr-pc16.c  sprr-pc17.c  (+33 more)
tools/: TLSTool
toybox/: Readme.md  toybox-master-t8101_arm64e-build-commit-7a5cb958177d4a1efd96f7b4074307731bfe9c06  toybox-unstripped-t8101-arm64e-commit-7a5cb958177d4a1efd96f7b4074307731bfe9c06
xcode/: IDSDaemonPriorityQueueUrgent-crash-x86_64-sample.txt  Instruments-2022-04-17-090416.ips  Readme.md  XCBBuildService_2021-07-30-204700_Ds-Mac-mini-2.crash  XCBBuildService_2021-07-30-205016_Ds-Mac-mini-2.crash  XCBBuildService_2021-07-30-205036_Ds-Mac-mini-2.crash  Xcode_2021-07-30-122943_Ds-Mac-mini-2.crash  Xcode_2021-07-30-123229_Ds-Mac-mini-2.crash  Xcode_2021-07-30-123320_Ds-Mac-mini-2.crash  Xcode_2021-07-30-125405_Ds-Mac-mini-2.crash  Xcode_2021-07-30-125551_Ds-Mac-mini-2.crash  Xcode_2021-07-30-131050_Ds-Mac-mini-2.crash  Xcode_2021-07-30-131654_Ds-Mac-mini-2.crash  Xcode_2021-07-30-163444_Ds-Mac-mini-2.crash  Xcode_2021-07-30-205505_Ds-Mac-mini-2.crash  Xcode_2021-07-30-205701_Ds-Mac-mini-2.crash  Xcode_2021-07-30-213403_Ds-Mac-mini-2.crash  Xcode_2021-07-30-213441_Ds-Mac-mini-2.crash  Xcode_2021-07-30-221142_Ds-Mac-mini-2.crash  Xcode_2021-07-30-221534_Ds-Mac-mini-2.crash  Xcode_2021-07-30-222812_Ds-Mac-mini-2.crash  Xcode_2021-07-30-224520_Ds-Mac-mini-2.crash  Xcode_2021-07-30-225412_Ds-Mac-mini-2.crash  Xcode_2021-07-30-225443_Ds-Mac-mini-2.crash  Xcode_2021-07-31-104323_Ds-Mac-mini-2.crash  Xcode_2021-09-07-165406_Ds-Mac-mini-2.crash  Xcode_2021-09-27-121049_JSON_POC_Crasher_001.crash  Xcode_2021-10-13-160619_Ds-Mac-mini-2.crash  Xcode_2021-10-13-160837_Ds-Mac-mini-2.crash  Xcode_2021-10-13-161014_Ds-Mac-mini-2.crash  Xcode_2021-10-18-114144_Ds-Mac-mini-2.crash  Xcode_2021-10-18-184201_Ds-Mac-mini-2.crash  Xcode_2021-10-19-123516_Ds-Mac-mini-2.crash  Xcode_2021-10-19-123821_Ds-Mac-mini-2.crash  Xcode_2021-10-19-124711_Ds-Mac-mini-2.crash  Xcode_2021-10-19-135110_Ds-Mac-mini-2.crash  Xcode_2021-10-19-135808_Ds-Mac-mini-2.crash  Xcode_2021-10-19-140217_Ds-Mac-mini-2.crash  Xcode_2021-10-20-201242_Ds-Mac-mini-2.crash  Xcode_2021-10-20-204643_Ds-Mac-mini-2.crash  (+19 more)
zsh/: README.md  find-recent-script.zsh  (+2 more)
(+140 files in other folders)
